public interface Expression{
    public DualNumber evaluate(DualNumber dn);
}